PA_Education/TestMenifest/force-app/main/default/objects/DailyTraining__c/DailyTraining__c.object-meta.xml
<CustomObject>
    <description>신입사원의 일일 업무 보고 개체</description>
    <label>업무일지</label>
    <nameField>
        <displayFormat>{YY}/{MM}-{000}</displayFormat>
        <label>업무일지</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>