PA_Education/TestMenifest/force-app/main/default/objects/DailyTraining__c/fields/Dt_DailyPlan__c.field-meta.xml
<CustomField>
    <fullName>Dt_DailyPlan__c</fullName>
    <description>금일 교육 계획를 기록</description>
    <label>금일계획</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>