PA_Education/TestMenifest/force-app/main/default/objects/DailyTraining__c/fields/Dt_DailyWork__c.field-meta.xml
<CustomField>
    <fullName>Dt_DailyWork__c</fullName>
    <description>금일 완료 및 진행중인 교육 내용을 기록</description>
    <label>금일실행</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>