PA_Education/TestMenifest/force-app/main/default/objects/DailyTraining__c/fields/Dt_Date__c.field-meta.xml
<CustomField>
    <fullName>Dt_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>일일보고 일자</description>
    <label>일자</label>
    <type>Date</type>
</CustomField>