PA_Education/TestMenifest/force-app/main/default/objects/DailyTraining__c/fields/Dt_DifficultReason__c.field-meta.xml
<CustomField>
    <fullName>Dt_DifficultReason__c</fullName>
    <description>금일계획을 달성하지 못했을 경우 나 교육과정 중 어려움이 있던 부분을 기록</description>
    <inlineHelpText>금일계획을 달성하지 못했을 경우 나 교육과정 중 어려움이 있던 부분을 기록</inlineHelpText>
    <label>내용</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>