PA_Education/TestMenifest/force-app/main/default/objects/DailyTraining__c/fields/Dt_EduName__c.field-meta.xml
<CustomField>
    <fullName>Dt_EduName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>진행중인 교육 프로그램</description>
    <label>교육 프로그램</label>
    <referenceTo>EduCurriculum__c</referenceTo>
    <relationshipLabel>업무일지</relationshipLabel>
    <relationshipName>Dt_EduName</relationshipName>
    <type>Lookup</type>
</CustomField>