PA_Education/TestMenifest/force-app/main/default/objects/DailyTraining__c/fields/Dt_EmployeeName__c.field-meta.xml
<CustomField>
    <fullName>Dt_EmployeeName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>업무일지를 작성하는 사원의 이름</description>
    <label>사원</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>업무일지</relationshipLabel>
    <relationshipName>Dt_EmployeeName</relationshipName>
    <type>Lookup</type>
</CustomField>