PA_Education/TestMenifest/force-app/main/default/objects/DailyTraining__c/fields/Dt_fm_UserName__c.field-meta.xml
<CustomField>
    <fullName>Dt_fm_UserName__c</fullName>
    <formula>Dt_UserName__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>사원 이름</label>
    <type>Text</type>
</CustomField>