PA_Education/TestMenifest/force-app/main/default/objects/DailyTraining__c/fields/Dt_Mentor__c.field-meta.xml
<CustomField>
    <fullName>Dt_Mentor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>담당멘토</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>업무일지 (담당멘토)</relationshipLabel>
    <relationshipName>Dt_Mentor</relationshipName>
    <type>Lookup</type>
</CustomField>