PA_Education/TestMenifest/force-app/main/default/objects/DailyTraining__c/fields/Dt_MentorUser__c.field-meta.xml
<CustomField>
    <fullName>Dt_MentorUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>담당멘토 명</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Dt_MentorUser</relationshipName>
    <type>Lookup</type>
</CustomField>