PA_Education/TestMenifest/force-app/main/default/objects/DailyTraining__c/fields/Dt_UserName__c.field-meta.xml
<CustomField>
    <fullName>Dt_UserName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>사원 명</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Dt_UserName</relationshipName>
    <type>Lookup</type>
</CustomField>