PA_Education/TestMenifest/force-app/main/default/objects/DailyTraining__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dt_Date__c</columns>
    <columns>Dt_EmployeeName__c</columns>
    <columns>Dt_EduName__c</columns>
    <columns>Dt_DailyPlan__c</columns>
    <columns>Dt_DailyWork__c</columns>
    <columns>Dt_DifficultReason__c</columns>
    <columns>Dt_Mentor__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>