PA_Education/TestMenifest/force-app/main/default/objects/DailyTraining__c/listViews/Today_Dt_List.listView-meta.xml
<ListView>
    <fullName>Today_Dt_List</fullName>
    <columns>NAME</columns>
    <columns>Dt_Date__c</columns>
    <columns>Dt_EmployeeName__c</columns>
    <columns>Dt_EduName__c</columns>
    <columns>Dt_DailyPlan__c</columns>
    <columns>Dt_DailyWork__c</columns>
    <columns>Dt_DifficultReason__c</columns>
    <columns>Dt_Mentor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dt_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>금일 업무일지</label>
</ListView>